# llada_quantization

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
AutoGPTQ/: quantize.py
AutoGPTQ/auto_gptq/modeling/: __init__.py  _base.py  _const.py  auto.py  dream_base.py  llada.py  mpt.py
DuQuant/: datautils.py  generate_act_scale_shift.py  get_rot.py  main.py  main_duquant_gptq.py  main_duquant_mxfp4.py  parallel_utils.py  requirements.txt  utils.py
DuQuant/duquant_gptq_log/LLaDA-8B-Instruct_w4a4/: log_rank0_1764063474.txt  log_rank0_1764063763.txt  log_rank0_1764063950.txt  log_rank0_1764064417.txt  log_rank0_1764067003.txt  log_rank0_1764075246.txt  (+7 more)
DuQuant/models/: LMClass.py  int_dream_layer.py  int_llada_layer.py  int_llama_layer.py  int_mistral_layer.py  modeling_dream.py  models_utils.py  transformation.py
DuQuant/quantize/: duquant.py  int_linear.py  int_matmul.py  mxfp4_quantizer.py  quantizer.py  utils.py
QuaRot/fake_quant/: data_utils.py  eval_utils.py  gptq_utils.py  hadamard_utils.py  main.py  model_utils.py  monkeypatch.py  rotation_utils.py  utils.py
duquant_gptq_log/LLaDA-8B-Base_w4a4/: log_rank0_1764071629.txt  log_rank0_1764076023.txt  log_rank0_1764085840.txt  log_rank0_1764089313.txt
llm-awq/: entry.py  pyproject.toml
llm-awq/awq/quantize/: auto_scale.py  modeling_llada.py  pre_quant.py  quantizer.py  smooth.py  w8a8_linear.py
lm_evaluation_harness/lm_eval/: __main__.py  evaluator.py  evaluator_utils.py
scripts/: docker_build.sh  docker_run.sh  llada_duquant.sh  llada_duquant_gptq.sh  llada_duquant_mxfp4.sh
(+45 files in other folders)
